// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`codegen should generate typescript code 1`] = `
"import { Model } from '@snapshot-labs/checkpoint';

export class Space extends Model {
  static tableName = 'spaces';

  static fieldNames = ['id', 'name', 'about', 'controller', 'voting_delay', 'proposal_threshold', 'quorum', 'strategies', 'strategies_nonnull', '_indexer'];

  constructor(id: string, indexerName: string) {
    super(Space.tableName, indexerName);

    if (typeof id === 'string' && [...id].length > 256) {
      throw new Error('Value for Space.id exceeds 256 characters');
    }

    if (typeof id === 'string' && id.includes('\\u0000')) {
      throw new Error('Value for Space.id contains a NUL character');
    }

    this.initialSet('id', id);
    this.initialSet('name', null);
    this.initialSet('about', null);
    this.initialSet('controller', "");
    this.initialSet('voting_delay', 0);
    this.initialSet('proposal_threshold', 0n);
    this.initialSet('quorum', 0);
    this.initialSet('strategies', "[]");
    this.initialSet('strategies_nonnull', "[]");
    this.initialSet('_indexer', "");
  }

  static async loadEntity(id: string, indexerName: string): Promise<Space | null> {
    const entity = await super._loadEntity(Space.tableName, id, indexerName);
    if (!entity) return null;

    const model = new Space(id, indexerName);
    model.setExists();

    for (const key of Space.fieldNames) {
      const value = entity[key] !== null && typeof entity[key] === 'object'
        ? JSON.stringify(entity[key])
        : entity[key];
      model.set(key, value);
    }

    return model;
  }

  get id(): string {
    return this.get('id');
  }

  set id(value: string) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space.id exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space.id contains a NUL character');
    }

    this.set('id', value);
  }

  get name(): string | null {
    return this.get('name');
  }

  set name(value: string | null) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space.name exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space.name contains a NUL character');
    }

    this.set('name', value);
  }

  get about(): string | null {
    return this.get('about');
  }

  set about(value: string | null) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space.about exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space.about contains a NUL character');
    }

    this.set('about', value);
  }

  get controller(): string {
    return this.get('controller');
  }

  set controller(value: string) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space.controller exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space.controller contains a NUL character');
    }

    this.set('controller', value);
  }

  get voting_delay(): number {
    return this.get('voting_delay');
  }

  set voting_delay(value: number) {
    this.set('voting_delay', value);
  }

  get proposal_threshold(): bigint {
    return BigInt(this.get('proposal_threshold'));
  }

  set proposal_threshold(value: bigint | number | string) {
    this.set('proposal_threshold', BigInt(value));
  }

  get quorum(): number {
    return this.get('quorum');
  }

  set quorum(value: number) {
    this.set('quorum', value);
  }

  get strategies(): string[] {
    return JSON.parse(this.get('strategies'));
  }

  set strategies(value: string[]) {
    if (Array.isArray(value) && value.some(item => typeof item === 'string' && item.includes('\\u0000'))) {
      throw new Error('Value for Space.strategies contains a NUL character');
    }

    this.set('strategies', JSON.stringify(value));
  }

  get strategies_nonnull(): string[] {
    return JSON.parse(this.get('strategies_nonnull'));
  }

  set strategies_nonnull(value: string[]) {
    if (Array.isArray(value) && value.some(item => typeof item === 'string' && item.includes('\\u0000'))) {
      throw new Error('Value for Space.strategies_nonnull contains a NUL character');
    }

    this.set('strategies_nonnull', JSON.stringify(value));
  }

  get _indexer(): string {
    return this.get('_indexer');
  }

  set _indexer(value: string) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space._indexer exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space._indexer contains a NUL character');
    }

    this.set('_indexer', value);
  }
}

export class Proposal extends Model {
  static tableName = 'proposals';

  static fieldNames = ['id', 'proposal_id', 'space', 'title', 'scores_total', 'active', 'progress', '_indexer'];

  constructor(id: string, indexerName: string) {
    super(Proposal.tableName, indexerName);

    if (typeof id === 'string' && [...id].length > 256) {
      throw new Error('Value for Proposal.id exceeds 256 characters');
    }

    if (typeof id === 'string' && id.includes('\\u0000')) {
      throw new Error('Value for Proposal.id contains a NUL character');
    }

    this.initialSet('id', id);
    this.initialSet('proposal_id', 0);
    this.initialSet('space', "");
    this.initialSet('title', "");
    this.initialSet('scores_total', 0n);
    this.initialSet('active', false);
    this.initialSet('progress', "0");
    this.initialSet('_indexer', "");
  }

  static async loadEntity(id: string, indexerName: string): Promise<Proposal | null> {
    const entity = await super._loadEntity(Proposal.tableName, id, indexerName);
    if (!entity) return null;

    const model = new Proposal(id, indexerName);
    model.setExists();

    for (const key of Proposal.fieldNames) {
      const value = entity[key] !== null && typeof entity[key] === 'object'
        ? JSON.stringify(entity[key])
        : entity[key];
      model.set(key, value);
    }

    return model;
  }

  get id(): string {
    return this.get('id');
  }

  set id(value: string) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Proposal.id exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal.id contains a NUL character');
    }

    this.set('id', value);
  }

  get proposal_id(): number {
    return this.get('proposal_id');
  }

  set proposal_id(value: number) {
    this.set('proposal_id', value);
  }

  get space(): string {
    return this.get('space');
  }

  set space(value: string) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Proposal.space exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal.space contains a NUL character');
    }

    this.set('space', value);
  }

  get title(): string {
    return this.get('title');
  }

  set title(value: string) {
    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal.title contains a NUL character');
    }

    this.set('title', value);
  }

  get scores_total(): bigint {
    return BigInt(this.get('scores_total'));
  }

  set scores_total(value: bigint | number | string) {
    this.set('scores_total', BigInt(value));
  }

  get active(): boolean {
    return this.get('active');
  }

  set active(value: boolean) {
    this.set('active', value);
  }

  get progress(): string {
    return this.get('progress');
  }

  set progress(value: string) {
    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal.progress contains a NUL character');
    }

    this.set('progress', value);
  }

  get _indexer(): string {
    return this.get('_indexer');
  }

  set _indexer(value: string) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Proposal._indexer exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal._indexer contains a NUL character');
    }

    this.set('_indexer', value);
  }
}
"
`;

exports[`codegen should generate javascript code 1`] = `
"import { Model } from '@snapshot-labs/checkpoint';

export class Space extends Model {
  static tableName = 'spaces';

  static fieldNames = ['id', 'name', 'about', 'controller', 'voting_delay', 'proposal_threshold', 'quorum', 'strategies', 'strategies_nonnull', '_indexer'];

  constructor(id, indexerName) {
    super(Space.tableName, indexerName);

    if (typeof id === 'string' && [...id].length > 256) {
      throw new Error('Value for Space.id exceeds 256 characters');
    }

    if (typeof id === 'string' && id.includes('\\u0000')) {
      throw new Error('Value for Space.id contains a NUL character');
    }

    this.initialSet('id', id);
    this.initialSet('name', null);
    this.initialSet('about', null);
    this.initialSet('controller', "");
    this.initialSet('voting_delay', 0);
    this.initialSet('proposal_threshold', 0n);
    this.initialSet('quorum', 0);
    this.initialSet('strategies', "[]");
    this.initialSet('strategies_nonnull', "[]");
    this.initialSet('_indexer', "");
  }

  static async loadEntity(id, indexerName) {
    const entity = await super._loadEntity(Space.tableName, id, indexerName);
    if (!entity) return null;

    const model = new Space(id, indexerName);
    model.setExists();

    for (const key of Space.fieldNames) {
      const value = entity[key] !== null && typeof entity[key] === 'object'
        ? JSON.stringify(entity[key])
        : entity[key];
      model.set(key, value);
    }

    return model;
  }

  get id() {
    return this.get('id');
  }

  set id(value) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space.id exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space.id contains a NUL character');
    }

    this.set('id', value);
  }

  get name() {
    return this.get('name');
  }

  set name(value) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space.name exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space.name contains a NUL character');
    }

    this.set('name', value);
  }

  get about() {
    return this.get('about');
  }

  set about(value) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space.about exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space.about contains a NUL character');
    }

    this.set('about', value);
  }

  get controller() {
    return this.get('controller');
  }

  set controller(value) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space.controller exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space.controller contains a NUL character');
    }

    this.set('controller', value);
  }

  get voting_delay() {
    return this.get('voting_delay');
  }

  set voting_delay(value) {
    this.set('voting_delay', value);
  }

  get proposal_threshold() {
    return BigInt(this.get('proposal_threshold'));
  }

  set proposal_threshold(value) {
    this.set('proposal_threshold', BigInt(value));
  }

  get quorum() {
    return this.get('quorum');
  }

  set quorum(value) {
    this.set('quorum', value);
  }

  get strategies() {
    return JSON.parse(this.get('strategies'));
  }

  set strategies(value) {
    if (Array.isArray(value) && value.some(item => typeof item === 'string' && item.includes('\\u0000'))) {
      throw new Error('Value for Space.strategies contains a NUL character');
    }

    this.set('strategies', JSON.stringify(value));
  }

  get strategies_nonnull() {
    return JSON.parse(this.get('strategies_nonnull'));
  }

  set strategies_nonnull(value) {
    if (Array.isArray(value) && value.some(item => typeof item === 'string' && item.includes('\\u0000'))) {
      throw new Error('Value for Space.strategies_nonnull contains a NUL character');
    }

    this.set('strategies_nonnull', JSON.stringify(value));
  }

  get _indexer() {
    return this.get('_indexer');
  }

  set _indexer(value) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Space._indexer exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Space._indexer contains a NUL character');
    }

    this.set('_indexer', value);
  }
}

export class Proposal extends Model {
  static tableName = 'proposals';

  static fieldNames = ['id', 'proposal_id', 'space', 'title', 'scores_total', 'active', 'progress', '_indexer'];

  constructor(id, indexerName) {
    super(Proposal.tableName, indexerName);

    if (typeof id === 'string' && [...id].length > 256) {
      throw new Error('Value for Proposal.id exceeds 256 characters');
    }

    if (typeof id === 'string' && id.includes('\\u0000')) {
      throw new Error('Value for Proposal.id contains a NUL character');
    }

    this.initialSet('id', id);
    this.initialSet('proposal_id', 0);
    this.initialSet('space', "");
    this.initialSet('title', "");
    this.initialSet('scores_total', 0n);
    this.initialSet('active', false);
    this.initialSet('progress', "0");
    this.initialSet('_indexer', "");
  }

  static async loadEntity(id, indexerName) {
    const entity = await super._loadEntity(Proposal.tableName, id, indexerName);
    if (!entity) return null;

    const model = new Proposal(id, indexerName);
    model.setExists();

    for (const key of Proposal.fieldNames) {
      const value = entity[key] !== null && typeof entity[key] === 'object'
        ? JSON.stringify(entity[key])
        : entity[key];
      model.set(key, value);
    }

    return model;
  }

  get id() {
    return this.get('id');
  }

  set id(value) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Proposal.id exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal.id contains a NUL character');
    }

    this.set('id', value);
  }

  get proposal_id() {
    return this.get('proposal_id');
  }

  set proposal_id(value) {
    this.set('proposal_id', value);
  }

  get space() {
    return this.get('space');
  }

  set space(value) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Proposal.space exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal.space contains a NUL character');
    }

    this.set('space', value);
  }

  get title() {
    return this.get('title');
  }

  set title(value) {
    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal.title contains a NUL character');
    }

    this.set('title', value);
  }

  get scores_total() {
    return BigInt(this.get('scores_total'));
  }

  set scores_total(value) {
    this.set('scores_total', BigInt(value));
  }

  get active() {
    return this.get('active');
  }

  set active(value) {
    this.set('active', value);
  }

  get progress() {
    return this.get('progress');
  }

  set progress(value) {
    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal.progress contains a NUL character');
    }

    this.set('progress', value);
  }

  get _indexer() {
    return this.get('_indexer');
  }

  set _indexer(value) {
    if (typeof value === 'string' && [...value].length > 256) {
      throw new Error('Value for Proposal._indexer exceeds 256 characters');
    }

    if (typeof value === 'string' && value.includes('\\u0000')) {
      throw new Error('Value for Proposal._indexer contains a NUL character');
    }

    this.set('_indexer', value);
  }
}
"
`;
